<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/main_horizontal_padding"
    tools:context=".presentation.registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/head_bottom_padding"
        android:paddingTop="@dimen/head_top_padding"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/ic_label" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start">

            <ImageView
                android:id="@+id/arrowView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/arrow_image"
                android:paddingHorizontal="@dimen/main_horizontal_padding"
                android:src="@drawable/ic_arrow_left" />

            <ImageView
                android:id="@+id/userView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/user_image"
                android:src="@drawable/ic_user" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/geologica_roman_regular"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/registration_text"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginBottom="16dp"
        android:autofillHints="username"
        android:background="@drawable/input_rounded"
        android:fontFamily="@font/noto_sans_hk"
        android:hint="@string/name_edit_hint"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:autofillHints="emailAddress"
        android:hint="@string/email_edit_hint"
        android:background="@drawable/input_rounded"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:autofillHints="password"
        android:hint="@string/password_edit_hint"
        android:background="@drawable/input_rounded"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:autofillHints="password"
        android:hint="@string/password_edit_hint"
        android:background="@drawable/input_rounded"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/haveAccountButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/have_account_text"
            android:textColor="#222222"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            app:cornerRadius="28dp"
            app:backgroundTint="#00ffffff"
            android:textSize="16sp"
            app:strokeWidth="1dp"
            app:strokeColor="#222222"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/save_text"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            app:cornerRadius="28dp"
            app:backgroundTint="#FFD700"
            android:textColor="#222222"
            android:textSize="16sp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

    </LinearLayout>

</LinearLayout>